完善性能优化知识点