@@ -8,307 +8,1188 @@ title: Spring 性能优化实战指南
 
 ## 概述
 
-Spring 应用性能优化是一个系统工程，涉及启动性能、运行时性能、内存使用等多个方面。本指南从实战角度出发，提供可落地的优化方案。
+性能优化是 Spring 应用开发中的重要环节。本文从实战角度出发，深度解析 Spring 应用的性能优化策略和技巧。
 
 ```mermaid
 graph TB
-    A[Spring 性能优化] --> B[启动性能优化]
-    A --> C[运行时性能优化]
-    A --> D[内存使用优化]
-    A --> E[监控与诊断]
+    A[Spring 性能优化] --> B[应用性能监控]
+    A --> C[内存优化]
+    A --> D[启动性能优化]
+    A --> E[并发性能优化]
+    A --> F[数据库性能优化]
+    A --> G[缓存优化]
+    A --> H[网络优化]
     
-    B --> B1[组件扫描优化]
-    B --> B2[懒加载策略]
-    B --> B3[自动配置排除]
+    B --> B1[Spring Boot Actuator]
+    B --> B2[自定义指标]
+    B --> B3[性能分析工具]
+    B --> B4[APM 集成]
     
-    C --> C1[Bean 生命周期优化]
-    C --> C2[事务管理优化]
-    C --> C3[缓存策略优化]
+    C --> C1[内存泄漏排查]
+    C --> C2[GC 调优]
+    C --> C3[对象池优化]
+    C --> C4[堆外内存管理]
     
-    D --> D1[Bean 泄漏预防]
-    D --> D2[ThreadLocal 管理]
-    D --> D3[大对象处理]
+    D --> D1[懒加载策略]
+    D --> D2[组件扫描优化]
+    D --> D3[类路径优化]
+    D --> D4[AOT 编译]
     
-    E --> E1[Actuator 监控]
-    E --> E2[Profiler 分析]
-    E --> E3[内存分析工具]
+    E --> E1[线程池配置]
+    E --> E2[异步处理]
+    E --> E3[响应式编程]
+    E --> E4[虚拟线程]
+    
+    F --> F1[连接池优化]
+    F --> F2[SQL 优化]
+    F --> F3[事务优化]
+    F --> F4[分库分表]
+    
+    G --> G1[缓存策略]
+    G --> G2[缓存穿透/击穿/雪崩]
+    G --> G3[多级缓存]
+    G --> G4[缓存预热]
+    
+    H --> H1[连接池优化]
+    H --> H2[HTTP 客户端优化]
+    H --> H3[序列化优化]
+    H --> H4[压缩优化]
+```
+
+## 应用性能监控
+
+### 1. Spring Boot Actuator 深度使用
+
+#### 完整监控配置
+```yaml
+# application.yml
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,metrics,info,beans,env,configprops,conditions,httptrace,loggers,threaddump
+      base-path: /actuator
+      path-mapping:
+        health: healthcheck
+    jmx:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
+      enabled: true
+      probes:
+        enabled: true
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+    loggers:
+      enabled: true
+    threaddump:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+        step: 1m
+      influx:
+        enabled: false
+    tags:
+      application: ${spring.application.name}
+      environment: ${spring.profiles.active:default}
+      instance: ${HOSTNAME:local}
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+      sla:
+        http.server.requests: 100ms,200ms,500ms,1s,2s
+  info:
+    env:
+      enabled: true
+    build:
+      enabled: true
+    git:
+      enabled: true
+      mode: full
+
+# 安全配置（生产环境）
+spring:
+  security:
+    user:
+      name: actuator
+      password: ${ACTUATOR_PASSWORD:changeme}
+      roles: ACTUATOR
+```
+
+#### 自定义健康检查
+```java
+@Component
+public class CustomHealthIndicator implements HealthIndicator {
+    
+    @Autowired
+    private DataSource dataSource;
+    
+    @Autowired
+    private RedisTemplate<String, Object> redisTemplate;
+    
+    @Autowired
+    private ApplicationContext applicationContext;
+    
+    @Override
+    public Health health() {
+        Map<String, Object> details = new HashMap<>();
+        
+        // 数据库健康检查
+        try (Connection connection = dataSource.getConnection()) {
+            details.put("database", "UP");
+            details.put("database.connection", connection.isValid(5));
+        } catch (Exception e) {
+            details.put("database", "DOWN");
+            details.put("database.error", e.getMessage());
+        }
+        
+        // Redis 健康检查
+        try {
+            redisTemplate.opsForValue().get("health-check");
+            details.put("redis", "UP");
+        } catch (Exception e) {
+            details.put("redis", "DOWN");
+            details.put("redis.error", e.getMessage());
+        }
+        
+        // Bean 状态检查
+        String[] beanNames = applicationContext.getBeanDefinitionNames();
+        details.put("beans.total", beanNames.length);
+        
+        // 内存使用情况
+        Runtime runtime = Runtime.getRuntime();
+        details.put("memory.used", formatBytes(runtime.totalMemory() - runtime.freeMemory()));
+        details.put("memory.free", formatBytes(runtime.freeMemory()));
+        details.put("memory.total", formatBytes(runtime.totalMemory()));
+        details.put("memory.max", formatBytes(runtime.maxMemory()));
+        
+        boolean isHealthy = details.get("database").equals("UP") && 
+                           details.get("redis").equals("UP");
+        
+        return isHealthy ? Health.up().withDetails(details).build() 
+                        : Health.down().withDetails(details).build();
+    }
+    
+    private String formatBytes(long bytes) {
+        if (bytes < 1024) return bytes + " B";
+        int exp = (int) (Math.log(bytes) / Math.log(1024));
+        String pre = "KMGTPE".charAt(exp-1) + "";
+        return String.format("%.1f %sB", bytes / Math.pow(1024, exp), pre);
+    }
+}
+
+// 就绪状态检查（Kubernetes）
+@Component
+public class ReadinessHealthIndicator implements HealthIndicator {
+    
+    private volatile boolean isReady = false;
+    
+    @EventListener
+    public void onApplicationReady(ApplicationReadyEvent event) {
+        // 应用完全启动后设置为就绪状态
+        isReady = true;
+    }
+    
+    @Override
+    public Health health() {
+        if (isReady) {
+            return Health.up().withDetail("status", "Application is ready").build();
+        } else {
+            return Health.down().withDetail("status", "Application is starting").build();
+        }
+    }
+}
+```
+
+#### 自定义性能指标
+```java
+@Component
+public class PerformanceMetrics {
+    
+    private final MeterRegistry meterRegistry;
+    
+    // HTTP 请求指标
+    private final Timer httpRequestTimer;
+    private final Counter httpRequestCounter;
+    private final DistributionSummary httpRequestSize;
+    
+    // 数据库指标
+    private final Timer databaseQueryTimer;
+    private final Counter databaseQueryCounter;
+    
+    // 缓存指标
+    private final Timer cacheAccessTimer;
+    private final Counter cacheHitCounter;
+    private final Counter cacheMissCounter;
+    
+    // 业务指标
+    private final Counter orderCreatedCounter;
+    private final Counter paymentProcessedCounter;
+    private final Timer orderProcessingTimer;
+    
+    public PerformanceMetrics(MeterRegistry meterRegistry) {
+        this.meterRegistry = meterRegistry;
+        
+        // HTTP 指标
+        this.httpRequestTimer = Timer.builder("http.requests")
+            .description("HTTP request processing time")
+            .publishPercentiles(0.5, 0.95, 0.99) // 50%, 95%, 99% 分位数
+            .publishPercentileHistogram()
+            .register(meterRegistry);
+            
+        this.httpRequestCounter = Counter.builder("http.requests.total")
+            .description("Total HTTP requests")
+            .register(meterRegistry);
+            
+        this.httpRequestSize = DistributionSummary.builder("http.request.size")
+            .description("HTTP request size in bytes")
+            .baseUnit("bytes")
+            .register(meterRegistry);
+        
+        // 数据库指标
+        this.databaseQueryTimer = Timer.builder("database.queries")
+            .description("Database query execution time")
+            .publishPercentiles(0.5, 0.95, 0.99)
+            .register(meterRegistry);
+            
+        this.databaseQueryCounter = Counter.builder("database.queries.total")
+            .description("Total database queries")
+            .register(meterRegistry);
+        
+        // 缓存指标
+        this.cacheAccessTimer = Timer.builder("cache.access")
+            .description("Cache access time")
+            .register(meterRegistry);
+            
+        this.cacheHitCounter = Counter.builder("cache.hits")
+            .description("Cache hits")
+            .register(meterRegistry);
+            
+        this.cacheMissCounter = Counter.builder("cache.misses")
+            .description("Cache misses")
+            .register(meterRegistry);
+        
+        // 业务指标
+        this.orderCreatedCounter = Counter.builder("business.orders.created")
+            .description("Number of orders created")
+            .register(meterRegistry);
+            
+        this.paymentProcessedCounter = Counter.builder("business.payments.processed")
+            .description("Number of payments processed")
+            .register(meterRegistry);
+            
+        this.orderProcessingTimer = Timer.builder("business.orders.processing")
+            .description("Order processing time")
+            .publishPercentiles(0.5, 0.95, 0.99)
+            .register(meterRegistry);
+    }
+    
+    // HTTP 请求监控
+    public Timer.Sample startHttpRequest() {
+        httpRequestCounter.increment();
+        return Timer.start(meterRegistry);
+    }
+    
+    public void endHttpRequest(Timer.Sample sample, String method, String uri, int status) {
+        sample.stop(httpRequestTimer);
+        
+        // 记录标签信息
+        meterRegistry.counter("http.requests", 
+            "method", method,
+            "uri", uri,
+            "status", String.valueOf(status)
+        ).increment();
+    }
+    
+    // 数据库查询监控
+    public Timer.Sample startDatabaseQuery() {
+        databaseQueryCounter.increment();
+        return Timer.start(meterRegistry);
+    }
+    
+    public void endDatabaseQuery(Timer.Sample sample, String queryType) {
+        sample.stop(databaseQueryTimer);
+        
+        meterRegistry.counter("database.queries", "type", queryType).increment();
+    }
+    
+    // 缓存访问监控
+    public Timer.Sample startCacheAccess() {
+        return Timer.start(meterRegistry);
+    }
+    
+    public void endCacheAccess(Timer.Sample sample, boolean hit) {
+        sample.stop(cacheAccessTimer);
+        
+        if (hit) {
+            cacheHitCounter.increment();
+        } else {
+            cacheMissCounter.increment();
+        }
+    }
+    
+    // 业务指标记录
+    public void recordOrderCreated() {
+        orderCreatedCounter.increment();
+    }
+    
+    public void recordPaymentProcessed() {
+        paymentProcessedCounter.increment();
+    }
+    
+    public Timer.Sample startOrderProcessing() {
+        return Timer.start(meterRegistry);
+    }
+    
+    public void endOrderProcessing(Timer.Sample sample) {
+        sample.stop(orderProcessingTimer);
+    }
+}
+
+// HTTP 拦截器记录指标
+@Component
+public class MetricsInterceptor implements HandlerInterceptor {
+    
+    @Autowired
+    private PerformanceMetrics performanceMetrics;
+    
+    private ThreadLocal<Timer.Sample> requestTimer = new ThreadLocal<>();
+    
+    @Override
+    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
+        requestTimer.set(performanceMetrics.startHttpRequest());
+        return true;
+    }
+    
+    @Override
+    public void afterCompletion(HttpServletRequest request, HttpServletResponse response, Object handler, Exception ex) throws Exception {
+        Timer.Sample sample = requestTimer.get();
+        if (sample != null) {
+            performanceMetrics.endHttpRequest(
+                sample,
+                request.getMethod(),
+                request.getRequestURI(),
+                response.getStatus()
+            );
+            requestTimer.remove();
+        }
+    }
+}
+
+// 配置拦截器
+@Configuration
+public class WebMvcConfig implements WebMvcConfigurer {
+    
+    @Autowired
+    private MetricsInterceptor metricsInterceptor;
+    
+    @Override
+    public void addInterceptors(InterceptorRegistry registry) {
+        registry.addInterceptor(metricsInterceptor)
+            .addPathPatterns("/api/**");
+    }
+}
+```
+
+## 内存优化
+
+### 1. 内存泄漏排查与预防
+
+#### 常见内存泄漏场景
+```java
+// 1. 静态集合导致的内存泄漏
+@Component
+public class StaticCollectionLeak {
+    
+    // 错误：静态集合持有对象引用，导致无法GC
+    private static final List<Object> CACHE = new ArrayList<>();
+    
+    public void addToCache(Object obj) {
+        CACHE.add(obj); // 对象永远不会被回收
+    }
+    
+    // 正确：使用弱引用或定期清理
+    private static final Map<Object, WeakReference<Object>> WEAK_CACHE = new WeakHashMap<>();
+    
+    public void addToWeakCache(Object key, Object value) {
+        WEAK_CACHE.put(key, new WeakReference<>(value));
+    }
+}
+
+// 2. ThreadLocal 内存泄漏
+@Component
+public class ThreadLocalLeak {
+    
+    // 错误：ThreadLocal 未清理
+    private static final ThreadLocal<UserContext> USER_CONTEXT = new ThreadLocal<>();
+    
+    public void setUserContext(UserContext context) {
+        USER_CONTEXT.set(context);
+    }
+    
+    // 正确：使用后清理
+    public void cleanup() {
+        USER_CONTEXT.remove();
+    }
+    
+    // 更好的方案：使用 InheritableThreadLocal 或自定义清理
+    private static final ThreadLocal<UserContext> SAFE_USER_CONTEXT = 
+        new ThreadLocal<>() {
+            @Override
+            protected UserContext initialValue() {
+                return new UserContext();
+            }
+        };
+}
+
+// 3. 监听器注册未注销
+@Component
+public class ListenerLeak {
+    
+    private List<EventListener> listeners = new ArrayList<>();
+    
+    // 错误：监听器注册后未注销
+    public void registerListener(EventListener listener) {
+        listeners.add(listener);
+        // 应该提供注销方法
+    }
+    
+    // 正确：提供注销机制
+    public void unregisterListener(EventListener listener) {
+        listeners.remove(listener);
+    }
+    
+    @PreDestroy
+    public void cleanup() {
+        listeners.clear();
+    }
+}
+```
+
+#### 内存分析工具使用
+```java
+// 内存分析服务
+@Service
+public class MemoryAnalysisService {
+    
+    private static final Logger logger = LoggerFactory.getLogger(MemoryAnalysisService.class);
+    
+    // 获取内存快照
+    public void analyzeMemory() {
+        Runtime runtime = Runtime.getRuntime();
+        
+        long usedMemory = runtime.totalMemory() - runtime.freeMemory();
+        long maxMemory = runtime.maxMemory();
+        double memoryUsage = (double) usedMemory / maxMemory * 100;
+        
+        logger.info("内存使用情况: {}/{} ({:.2f}%)", 
+            formatBytes(usedMemory), formatBytes(maxMemory), memoryUsage);
+        
+        // 如果内存使用率过高，触发GC并重新分析
+        if (memoryUsage > 80) {
+            logger.warn("内存使用率过高，触发GC");
+            System.gc();
+            
+            // 重新计算
+            usedMemory = runtime.totalMemory() - runtime.freeMemory();
+            memoryUsage = (double) usedMemory / maxMemory * 100;
+            logger.info("GC后内存使用情况: {}/{} ({:.2f}%)", 
+                formatBytes(usedMemory), formatBytes(maxMemory), memoryUsage);
+        }
+    }
+    
+    // 分析对象内存占用
+    public void analyzeObjectMemory() {
+        MemoryMXBean memoryMXBean = ManagementFactory.getMemoryMXBean();
+        MemoryUsage heapUsage = memoryMXBean.getHeapMemoryUsage();
+        MemoryUsage nonHeapUsage = memoryMXBean.getNonHeapMemoryUsage();
+        
+        logger.info("堆内存: {}/{}", 
+            formatBytes(heapUsage.getUsed()), formatBytes(heapUsage.getMax()));
+        logger.info("非堆内存: {}/{}", 
+            formatBytes(nonHeapUsage.getUsed()), formatBytes(nonHeapUsage.getMax()));
+        
+        // 分析GC情况
+        List<GarbageCollectorMXBean> gcBeans = ManagementFactory.getGarbageCollectorMXBeans();
+        for (GarbageCollectorMXBean gcBean : gcBeans) {
+            logger.info("GC {}: 次数={}, 耗时={}ms", 
+                gcBean.getName(), gcBean.getCollectionCount(), gcBean.getCollectionTime());
+        }
+    }
+    
+    // 生成堆转储（需要JVM参数支持）
+    public void generateHeapDump() {
+        try {
+            String fileName = "heapdump_" + System.currentTimeMillis() + ".hprof";
+            HotSpotDiagnosticMXBean diagnosticMXBean = ManagementFactory
+                .getPlatformMXBean(HotSpotDiagnosticMXBean.class);
+            diagnosticMXBean.dumpHeap(fileName, true);
+            logger.info("堆转储已生成: {}", fileName);
+        } catch (IOException e) {
+            logger.error("生成堆转储失败", e);
+        }
+    }
+    
+    private String formatBytes(long bytes) {
+        if (bytes < 1024) return bytes + " B";
+        int exp = (int) (Math.log(bytes) / Math.log(1024));
+        String pre = "KMGTPE".charAt(exp-1) + "";
+        return String.format("%.1f %sB", bytes / Math.pow(1024, exp), pre);
+    }
+}
+```
+
+### 2. GC 调优策略
+
+#### JVM 参数优化
+```bash
+# 生产环境推荐配置
+java -jar application.jar \
+  -Xms2g -Xmx2g \
+  -XX:+UseG1GC \
+  -XX:MaxGCPauseMillis=200 \
+  -XX:G1HeapRegionSize=16m \
+  -XX:InitiatingHeapOccupancyPercent=45 \
+  -XX:G1ReservePercent=15 \
+  -XX:MaxMetaspaceSize=256m \
+  -XX:MaxDirectMemorySize=512m \
+  -XX:+HeapDumpOnOutOfMemoryError \
+  -XX:HeapDumpPath=/tmp/heapdump.hprof \
+  -XX:+PrintGCDetails \
+  -XX:+PrintGCDateStamps \
+  -Xloggc:/tmp/gc.log
+```
+
+#### GC 监控和调优
+```java
+@Component
+public class GCMonitor {
+    
+    private static final Logger logger = LoggerFactory.getLogger(GCMonitor.class);
+    
+    @EventListener
+    public void onApplicationReady(ApplicationReadyEvent event) {
+        startGCMonitoring();
+    }
+    
+    private void startGCMonitoring() {
+        ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1);
+        
+        scheduler.scheduleAtFixedRate(() -> {
+            try {
+                monitorGC();
+            } catch (Exception e) {
+                logger.error("GC监控异常", e);
+            }
+        }, 0, 60, TimeUnit.SECONDS); // 每分钟监控一次
+    }
+    
+    private void monitorGC() {
+        List<GarbageCollectorMXBean> gcBeans = ManagementFactory.getGarbageCollectorMXBeans();
+        
+        for (GarbageCollectorMXBean gcBean : gcBeans) {
+            long count = gcBean.getCollectionCount();
+            long time = gcBean.getCollectionTime();
+            
+            // 记录GC指标
+            logger.debug("GC {}: count={}, time={}ms", gcBean.getName(), count, time);
+            
+            // 如果GC过于频繁或耗时过长，发出警告
+            if (count > 1000 || time > 5000) {
+                logger.warn("GC异常: {} 过于频繁或耗时过长", gcBean.getName());
+            }
+        }
+    }
+}
 ```
 
 ## 启动性能优化
 
-### 1. 组件扫描优化
+### 1. 懒加载策略
 
-#### 问题分析
-默认的 `@SpringBootApplication` 会扫描主类所在包及其子包，可能导致扫描范围过大。
-
-#### 优化方案
-```java
-// 优化前：扫描整个包路径
-@SpringBootApplication
-public class Application { ... }
-
-// 优化后：精确指定扫描包
-@SpringBootApplication(scanBasePackages = {
-    "com.example.controller",
-    "com.example.service",
-    "com.example.repository"
-})
-public class Application { ... }
-
-// 或者使用组件扫描排除
-@ComponentScan(
-    basePackages = "com.example",
-    excludeFilters = @ComponentScan.Filter(
-        type = FilterType.REGEX, 
-        pattern = "com.example.config.*"
-    )
-)
-```
-
-#### 性能对比
-| 扫描策略 | 启动时间 | Bean 数量 | 内存占用 |
-|---------|---------|----------|---------|
-| 默认扫描 | 8.2s | 450 | 256MB |
-| 精确扫描 | 5.1s | 280 | 180MB |
-| 排除扫描 | 4.8s | 260 | 175MB |
-
-### 2. 使用 Spring Context Indexer
-
-#### 配置方法
-```xml
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-context-indexer</artifactId>
-    <optional>true</optional>
-</dependency>
-```
-
-#### 工作原理
-编译时生成 `META-INF/spring.components` 索引文件：
-```
-com.example.Service=org.springframework.stereotype.Component
-com.example.Repository=org.springframework.stereotype.Component
-```
-
-#### 性能提升
-- 启动时间减少 20-30%
-- 类路径扫描时间从秒级降到毫秒级
-
-### 3. 懒加载策略
-
-#### 适用场景
-- 初始化耗时的 Bean
-- 不常用的功能模块
-- 条件性加载的组件
-
-#### 实现方式
+#### 配置懒加载 Bean
 ```java
 @Configuration
-public class LazyConfig {
+public class LazyLoadingConfig {
     
-    @Lazy
+    // 大型服务使用懒加载
     @Bean
-    public HeavyInitializationService heavyService() {
-        // 初始化需要 5 秒
-        return new HeavyInitializationService();
+    @Lazy
+    public HeavyService heavyService() {
+        return new HeavyService();
     }
     
+    // 只在特定环境下加载的Bean
     @Bean
-    @Lazy
-    public CacheManager cacheManager() {
-        // 缓存管理器延迟初始化
-        return new RedisCacheManager();
+    @Profile("!test")
+    public ProductionService productionService() {
+        return new ProductionService();
+    }
+    
+    // 条件加载的Bean
+    @Bean
+    @ConditionalOnProperty(name = "feature.advanced", havingValue = "true")
+    public AdvancedFeatureService advancedFeatureService() {
+        return new AdvancedFeatureService();
     }
 }
 
-// 方法级别懒加载
+// 懒加载服务示例
 @Service
-public class UserService {
+@Lazy
+public class HeavyService {
     
-    @Lazy
-    @Autowired
-    private ReportService reportService;
+    private final List<BigObject> cache = new ArrayList<>();
     
-    public void generateReport() {
-        // 只有调用时才初始化
-        reportService.generate();
-    }
-}
-```
-
-### 4. 自动配置排除
-
-#### 识别不必要的自动配置
-```bash
-# 查看所有自动配置
-java -jar app.jar --debug
-
-# 输出示例
-Positive matches:
-   AopAutoConfiguration matched
-   DataSourceAutoConfiguration matched
-   JpaRepositoriesAutoConfiguration matched
-
-Negative matches:
-   ActiveMQAutoConfiguration did not match
-   KafkaAutoConfiguration did not match
-```
-
-#### 排除配置
-```yaml
-spring:
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-      - org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
-      - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
-```
-
-#### 条件化配置
-```java
-@Configuration
-@ConditionalOnProperty(name = "feature.cache.enabled", havingValue = "true")
-public class CacheAutoConfiguration {
-    
-    @Bean
-    @ConditionalOnMissingBean
-    public CacheManager cacheManager() {
-        return new RedisCacheManager();
-    }
-}
-```
-
-## 运行时性能优化
-
-### 1. Bean 生命周期优化
-
-#### 避免不必要的初始化
-```java
-@Service
-public class UserService {
-    
-    // 错误：在构造器中执行耗时操作
-    public UserService() {
-        this.initializeCache(); // 耗时 2 秒
-    }
-    
-    // 正确：使用 @PostConstruct
     @PostConstruct
     public void init() {
-        // 异步初始化
-        CompletableFuture.runAsync(this::initializeCache);
-    }
-    
-    // 或者按需初始化
-    public User getUser(Long id) {
-        if (cache == null) {
-            initializeCache();
+        // 初始化耗时操作
+        logger.info("HeavyService 初始化开始...");
+        
+        // 模拟耗时初始化
+        for (int i = 0; i < 10000; i++) {
+            cache.add(new BigObject("object_" + i));
         }
-        return cache.get(id);
-    }
-}
-```
-
-#### Bean 作用域优化
-```java
-@Configuration
-public class ScopeConfig {
-    
-    // 单例：适用于无状态服务
-    @Bean
-    @Scope("singleton")
-    public CalculatorService calculator() {
-        return new CalculatorService();
+        
+        logger.info("HeavyService 初始化完成");
     }
     
-    // 原型：适用于有状态或线程不安全对象
-    @Bean
-    @Scope("prototype")
-    public UserSession userSession() {
-        return new UserSession();
-    }
-    
-    // 请求作用域：Web 应用中使用
-    @Bean
-    @Scope(value = WebApplicationContext.SCOPE_REQUEST, proxyMode = ScopedProxyMode.TARGET_CLASS)
-    public RequestContext requestContext() {
-        return new RequestContext();
-    }
-}
-```
-
-### 2. 事务管理优化
-
-#### 事务传播行为选择
-```java
-@Service
-@Transactional
-public class OrderService {
-    
-    // 默认 REQUIRED：加入当前事务，没有则新建
-    public void createOrder(Order order) {
+    public void doSomething() {
         // 业务逻辑
     }
+}
+```
+
+#### 组件扫描优化
+```java
+@Configuration
+@ComponentScan(
+    basePackages = {
+        "com.example.core",
+        "com.example.service"
+    },
+    excludeFilters = @ComponentScan.Filter(
+        type = FilterType.REGEX, 
+        pattern = "com\.example\.service\.internal\..*"
+    )
+)
+public class OptimizedComponentScanConfig {
     
-    // REQUIRES_NEW：新建事务，挂起当前事务
-    @Transactional(propagation = Propagation.REQUIRES_NEW)
-    public void auditLog(AuditLog log) {
-        // 审计日志，独立事务
+    // 手动注册需要排除内部包但需要使用的Bean
+    @Bean
+    public InternalService internalService() {
+        return new InternalService();
     }
+}
+
+// 启动类优化
+@SpringBootApplication(
+    scanBasePackages = {
+        "com.example.controller",
+        "com.example.service",
+        "com.example.repository"
+    },
+    exclude = {
+        DataSourceAutoConfiguration.class,
+        DataSourceTransactionManagerAutoConfiguration.class,
+        HibernateJpaAutoConfiguration.class
+    }
+)
+public class OptimizedApplication {
     
-    // NOT_SUPPORTED：非事务方式执行
-    @Transactional(propagation = Propagation.NOT_SUPPORTED)
-    public void sendNotification(Notification notification) {
-        // 发送通知，不参与事务
+    public static void main(String[] args) {
+        SpringApplication app = new SpringApplication(OptimizedApplication.class);
+        
+        // 优化启动配置
+        app.setBannerMode(Banner.Mode.OFF);
+        app.setLogStartupInfo(false);
+        app.setLazyInitialization(true); // 启用懒加载
+        
+        app.run(args);
     }
 }
 ```
 
-#### 事务超时设置
-```java
-@Service
-public class BatchService {
+### 2. 类路径优化
+
+#### 减少不必要的依赖
+```xml
+<!-- pom.xml 依赖优化 -->
+<dependencies>
+    <!-- 核心Spring Boot Starter -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <exclusions>
+            <!-- 排除不需要的组件 -->
+            <exclusion>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-tomcat</artifactId>
+            </exclusion>
+            <exclusion>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
     
-    @Transactional(timeout = 30) // 30 秒超时
-    public void batchProcess(List<Data> dataList) {
-        for (Data data : dataList) {
-            processSingle(data);
+    <!-- 使用更轻量的Web服务器 -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-undertow</artifactId>
+    </dependency>
+    
+    <!-- 按需引入Jackson -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.15.2</version>
+    </dependency>
+    
+    <!-- 使用provided范围的依赖 -->
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <scope>provided</scope>
+    </dependency>
+</dependencies>
+```
+
+#### 类路径扫描优化
+```java
+// 自定义类路径扫描器
+@Component
+public class OptimizedClassPathScanner {
+    
+    public Set<Class<?>> scanPackages(String... basePackages) {
+        ClassPathScanningCandidateComponentProvider scanner = 
+            new ClassPathScanningCandidateComponentProvider(false);
+        
+        // 添加类型过滤器
+        scanner.addIncludeFilter(new AnnotationTypeFilter(Service.class));
+        scanner.addIncludeFilter(new AnnotationTypeFilter(Component.class));
+        scanner.addIncludeFilter(new AnnotationTypeFilter(Repository.class));
+        
+        Set<Class<?>> classes = new HashSet<>();
+        for (String basePackage : basePackages) {
+            Set<BeanDefinition> candidates = scanner.findCandidateComponents(basePackage);
+            for (BeanDefinition candidate : candidates) {
+                try {
+                    classes.add(Class.forName(candidate.getBeanClassName()));
+                } catch (ClassNotFoundException e) {
+                    logger.warn("无法加载类: {}", candidate.getBeanClassName());
+                }
+            }
+        }
+        
+        return classes;
+    }
+}
+```
+
+## 并发性能优化
+
+### 1. 线程池优化配置
+
+#### Spring 异步线程池配置
+```java
+@Configuration
+@EnableAsync
+public class AsyncThreadPoolConfig {
+    
+    // CPU 密集型任务线程池
+    @Bean("cpuIntensiveExecutor")
+    public Executor cpuIntensiveExecutor() {
+        ThreadPoolTaskExecutor executor = new ThreadPoolTaskExecutor();
+        executor.setCorePoolSize(Runtime.getRuntime().availableProcessors());
+        executor.setMaxPoolSize(Runtime.getRuntime().availableProcessors() * 2);
+        executor.setQueueCapacity(100);
+        executor.setThreadNamePrefix("cpu-intensive-");
+        executor.setRejectedExecutionHandler(new ThreadPoolExecutor.CallerRunsPolicy());
+        executor.setWaitForTasksToCompleteOnShutdown(true);
+        executor.setAwaitTerminationSeconds(60);
+        executor.initialize();
+        return executor;
+    }
+    
+    // I/O 密集型任务线程池
+    @Bean("ioIntensiveExecutor")
+    public Executor ioIntensiveExecutor() {
+        ThreadPoolTaskExecutor executor = new ThreadPoolTaskExecutor();
+        executor.setCorePoolSize(20);
+        executor.setMaxPoolSize(100);
+        executor.setQueueCapacity(1000);
+        executor.setThreadNamePrefix("io-intensive-");
+        executor.setRejectedExecutionHandler(new ThreadPoolExecutor.CallerRunsPolicy());
+        executor.setWaitForTasksToCompleteOnShutdown(true);
+        executor.setAwaitTerminationSeconds(60);
+        executor.initialize();
+        return executor;
+    }
+    
+    // 定时任务线程池
+    @Bean("scheduledExecutor")
+    public Executor scheduledExecutor() {
+        ScheduledExecutorService executor = Executors.newScheduledThreadPool(5);
+        return new DelegatingExecutor(executor);
+    }
+    
+    // 虚拟线程执行器（Java 21+）
+    @Bean("virtualThreadExecutor")
+    @ConditionalOnJava(range = ConditionalOnJava.Range.EQUAL_OR_NEWER, value = JavaVersion.SEVENTEEN)
+    public Executor virtualThreadExecutor() {
+        return Executors.newVirtualThreadPerTaskExecutor();
+    }
+}
+
+// 使用不同线程池的异步服务
+@Service
+public class OptimizedAsyncService {
+    
+    // CPU 密集型任务
+    @Async("cpuIntensiveExecutor")
+    public CompletableFuture<BigDecimal> calculateComplexData(ComplexData data) {
+        // 复杂计算逻辑
+        return CompletableFuture.completedFuture(performCalculation(data));
+    }
+    
+    // I/O 密集型任务
+    @Async("ioIntensiveExecutor")
+    public CompletableFuture<String> processFileUpload(MultipartFile file) {
+        // 文件处理逻辑
+        return CompletableFuture.completedFuture(processFile(file));
+    }
+    
+    // 虚拟线程任务（高并发场景）
+    @Async("virtualThreadExecutor")
+    public CompletableFuture<Void> handleHighConcurrencyRequest(RequestData data) {
+        // 高并发处理逻辑
+        return CompletableFuture.completedFuture(null);
+    }
+    
+    private BigDecimal performCalculation(ComplexData data) {
+        // 计算逻辑
+        return BigDecimal.ZERO;
+    }
+    
+    private String processFile(MultipartFile file) {
+        // 文件处理逻辑
+        return "processed";
+    }
+}
+```
+
+#### 连接池优化
+```java
+@Configuration
+public class ConnectionPoolConfig {
+    
+    // HikariCP 连接池配置（推荐）
+    @Bean
+    @ConfigurationProperties("spring.datasource.hikari")
+    public HikariDataSource dataSource() {
+        HikariDataSource dataSource = new HikariDataSource();
+        dataSource.setMaximumPoolSize(20);
+        dataSource.setMinimumIdle(5);
+        dataSource.setIdleTimeout(300000);
+        dataSource.setConnectionTimeout(20000);
+        dataSource.setMaxLifetime(1200000);
+        dataSource.setLeakDetectionThreshold(60000);
+        return dataSource;
+    }
+    
+    // Redis 连接池配置
+    @Bean
+    public LettuceConnectionFactory redisConnectionFactory() {
+        RedisStandaloneConfiguration config = new RedisStandaloneConfiguration("localhost", 6379);
+        
+        LettuceClientConfiguration clientConfig = LettuceClientConfiguration.builder()
+            .commandTimeout(Duration.ofSeconds(2))
+            .shutdownTimeout(Duration.ofSeconds(2))
+            .clientResources(ClientResources.builder()
+                .ioThreadPoolSize(4)
+                .computationThreadPoolSize(4)
+                .build())
+            .build();
+        
+        return new LettuceConnectionFactory(config, clientConfig);
+    }
+    
+    // HTTP 客户端连接池
+    @Bean
+    public RestTemplate restTemplate() {
+        return new RestTemplateBuilder()
+            .setConnectTimeout(Duration.ofSeconds(5))
+            .setReadTimeout(Duration.ofSeconds(10))
+            .requestFactory(() -> {
+                HttpComponentsClientHttpRequestFactory factory = 
+                    new HttpComponentsClientHttpRequestFactory();
+                factory.setConnectionRequestTimeout(5000);
+                factory.setConnectTimeout(5000);
+                factory.setReadTimeout(10000);
+                return factory;
+            })
+            .build();
+    }
+}
+```
+
+### 2. 响应式编程优化
+
+#### WebFlux 性能优化
+```java
+@Configuration
+public class WebFluxConfig {
+    
+    @Bean
+    public WebFluxConfigurer webFluxConfigurer() {
+        return new WebFluxConfigurer() {
+            @Override
+            public void configureHttpMessageCodecs(ServerCodecConfigurer configurer) {
+                // 配置编解码器
+                configurer.defaultCodecs().maxInMemorySize(10 * 1024 * 1024); // 10MB
+            }
+            
+            @Override
+            public void configurePathMatching(PathMatchConfigurer configurer) {
+                // 优化路径匹配
+                configurer.setUseTrailingSlashMatch(false);
+            }
+        };
+    }
+    
+    @Bean
+    public RouterFunction<ServerResponse> routerFunction() {
+        return RouterFunctions.route()
+            .GET("/api/users", this::getAllUsers)
+            .GET("/api/users/{id}", this::getUserById)
+            .POST("/api/users", this::createUser)
+            .build();
+    }
+    
+    private Mono<ServerResponse> getAllUsers(ServerRequest request) {
+        return ServerResponse.ok()
+            .contentType(MediaType.APPLICATION_JSON)
+            .body(userService.findAllUsers(), User.class);
+    }
+    
+    private Mono<ServerResponse> getUserById(ServerRequest request) {
+        String id = request.pathVariable("id");
+        return userService.findUserById(id)
+            .flatMap(user -> ServerResponse.ok().bodyValue(user))
+            .switchIfEmpty(ServerResponse.notFound().build());
+    }
+    
+    private Mono<ServerResponse> createUser(ServerRequest request) {
+        return request.bodyToMono(User.class)
+            .flatMap(userService::createUser)
+            .flatMap(user -> ServerResponse.created(URI.create("/api/users/" + user.getId())).bodyValue(user));
+    }
+}
+
+// 响应式数据访问优化
+@Repository
+public class ReactiveUserRepository {
+    
+    private final R2dbcEntityTemplate entityTemplate;
+    
+    public ReactiveUserRepository(R2dbcEntityTemplate entityTemplate) {
+        this.entityTemplate = entityTemplate;
+    }
+    
+    // 批量插入优化
+    public Flux<User> saveAllOptimized(Flux<User> users) {
+        return users.buffer(100) // 每100条一批
+            .flatMap(batch -> entityTemplate.insert(User.class).all(Flux.fromIterable(batch)));
+    }
+    
+    // 分页查询优化
+    public Flux<User> findAllWithPaging(int page, int size) {
+        return entityTemplate.select(User.class)
+            .matching(Query.empty().limit(size).offset(page * size))
+            .all();
+    }
+}
+```
+
+## 数据库性能优化
+
+### 1. 连接池和事务优化
+
+#### JPA/Hibernate 优化配置
+```java
+@Configuration
+@EnableJpaRepositories(
+    basePackages = "com.example.repository",
+    enableDefaultTransactions = false // 手动控制事务
+)
+@EnableTransactionManagement
+public class JpaConfig {
+    
+    @Bean
+    @ConfigurationProperties("spring.jpa")
+    public JpaProperties jpaProperties() {
+        return new JpaProperties();
+    }
+    
+    @Bean
+    public LocalContainerEntityManagerFactoryBean entityManagerFactory(
+            DataSource dataSource, JpaProperties jpaProperties) {
+        LocalContainerEntityManagerFactoryBean em = new LocalContainerEntityManagerFactoryBean();
+        em.setDataSource(dataSource);
+        em.setPackagesToScan("com.example.entity");
+        
+        HibernateJpaVendorAdapter vendorAdapter = new HibernateJpaVendorAdapter();
+        em.setJpaVendorAdapter(vendorAdapter);
+        
+        Map<String, Object> properties = new HashMap<>();
+        properties.putAll(jpaProperties.getProperties());
+        
+        // Hibernate 性能优化配置
+        properties.put("hibernate.jdbc.batch_size", 50);
+        properties.put("hibernate.order_inserts", true);
+        properties.put("hibernate.order_updates", true);
+        properties.put("hibernate.jdbc.fetch_size", 100);
+        properties.put("hibernate.show_sql", false);
+        properties.put("hibernate.format_sql", false);
+        properties.put("hibernate.use_sql_comments", false);
+        properties.put("hibernate.generate_statistics", true);
+        properties.put("hibernate.cache.use_second_level_cache", true);
+        properties.put("hibernate.cache.use_query_cache", true);
+        properties.put("hibernate.cache.region.factory_class", "org.hibernate.cache.jcache.JCacheRegionFactory");
+        
+        em.setJpaPropertyMap(properties);
+        return em;
+    }
+    
+    @Bean
+    public PlatformTransactionManager transactionManager(EntityManagerFactory emf) {
+        JpaTransactionManager transactionManager = new JpaTransactionManager();
+        transactionManager.setEntityManagerFactory(emf);
+        return transactionManager;
+    }
+}
+
+// 事务优化服务
+@Service
+@Transactional(readOnly = true) // 默认只读事务
+public class OptimizedTransactionService {
+    
+    @Autowired
+    private UserRepository userRepository;
+    
+    // 只读查询
+    public List<User> findAllUsers() {
+        return userRepository.findAll();
+    }
+    
+    // 写操作使用读写事务
+    @Transactional
+    public User createUser(User user) {
+        return userRepository.save(user);
+    }
+    
+    // 批量操作优化
+    @Transactional
+    public void batchCreateUsers(List<User> users) {
+        for (int i = 0; i < users.size(); i++) {
+            userRepository.save(users.get(i));
+            
+            // 每50条刷新一次，避免内存溢出
+            if (i % 50 == 0) {
+                userRepository.flush();
+            }
         }
     }
     
-    @Transactional(timeout = 300) // 5 分钟超时
-    public void largeBatchProcess(List<Data> dataList) {
-        // 大数据量处理
+    // 使用事务传播行为优化
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public void auditUserCreation(User user) {
+        // 独立事务记录审计日志
+        auditRepository.save(new AuditLog("USER_CREATED", user.getId()));
     }
 }
 ```
 
-#### 只读事务优化
+#### SQL 性能优化
 ```java
 @Repository
-@Transactional(readOnly = true) // 只读事务，性能更好
-public class UserRepository extends JpaRepository<User, Long> {
+public class OptimizedUserRepository {
     
-    @Query("SELECT u FROM User u WHERE u.status = 'ACTIVE'")
-    List<User> findActiveUsers();
+    @PersistenceContext
+    private EntityManager entityManager;
     
-    @Transactional // 写操作需要可写事务
-    public User saveUser(User user) {
-        return save(user);
+    // 使用原生SQL优化复杂查询
+    @Query(value = """
+        SELECT u.id, u.name, COUNT(o.id) as order_count
+        FROM users u 
+        LEFT JOIN orders o ON u.id = o.user_id
+        WHERE u.created_date >= :startDate
+        GROUP BY u.id, u.name
+        HAVING COUNT(o.id) > :minOrderCount
+        ORDER BY order_count DESC
+        LIMIT :limit
+        """, nativeQuery = true)
+    List<Object[]> findActiveUsersWithOrderCount(
+        @Param("startDate") LocalDate startDate,
+        @Param("minOrderCount") int minOrderCount,
+        @Param("limit") int limit);
+    
+    // 使用索引提示
+    @Query(value = """
+        SELECT /*+ INDEX(u idx_user_email) */ u 
+        FROM User u 
+        WHERE u.email = :email
+        """)
+    Optional<User> findByEmailWithIndexHint(@Param("email") String email);
+    
+    // 分页查询优化
+    public Page<User> findUsersWithOptimizedPaging(Pageable pageable) {
+        // 先查询ID，再根据ID查询详情（避免大字段分页）
+        Page<Long> userIds = userRepository.findUserIds(pageable);
+        List<User> users = userRepository.findAllById(userIds.getContent());
+        
+        return new PageImpl<>(users, pageable, userIds.getTotalElements());
+    }
+    
+    // 使用游标处理大数据量
+    public void processLargeDataset() {
+        Stream<User> userStream = userRepository.streamAllBy();
+        
+        try (userStream) {
+            userStream.forEach(user -> {
+                // 处理每个用户
+                processUser(user);
+            });
+        }
+    }
+    
+    private void processUser(User user) {
+        // 用户处理逻辑
     }
 }
 ```
 
-### 3. 缓存策略优化
+## 缓存优化
 
-#### 多级缓存配置
+### 1. 多级缓存策略
+
+#### Spring Cache 多级缓存实现
 ```java
 @Configuration
 @EnableCaching
-public class CacheConfig {
+public class MultiLevelCacheConfig {
     
+    // 一级缓存：本地缓存（Caffeine）
     @Bean
-    public CacheManager cacheManager() {
+    public CacheManager localCacheManager() {
         CaffeineCacheManager cacheManager = new CaffeineCacheManager();
         cacheManager.setCaffeine(Caffeine.newBuilder()
             .expireAfterWrite(10, TimeUnit.MINUTES)
@@ -317,398 +1198,458 @@ public class CacheConfig {
         return cacheManager;
     }
     
-    // Redis 二级缓存
+    // 二级缓存：Redis 分布式缓存
     @Bean
-    @Primary
-    public CacheManager redisCacheManager(RedisConnectionFactory factory) {
+    public RedisCacheManager redisCacheManager(RedisConnectionFactory redisConnectionFactory) {
         RedisCacheConfiguration config = RedisCacheConfiguration.defaultCacheConfig()
             .entryTtl(Duration.ofHours(1))
-            .serializeKeysWith(RedisSerializationContext.SerializationPair
-                .fromSerializer(new StringRedisSerializer()))
-            .serializeValuesWith(RedisSerializationContext.SerializationPair
-                .fromSerializer(new GenericJackson2JsonRedisSerializer()));
+            .disableCachingNullValues()
+            .serializeKeysWith(RedisSerializationContext.SerializationPair.fromSerializer(new StringRedisSerializer()))
+            .serializeValuesWith(RedisSerializationContext.SerializationPair.fromSerializer(new GenericJackson2JsonRedisSerializer()));
         
-        return RedisCacheManager.builder(factory)
+        return RedisCacheManager.builder(redisConnectionFactory)
             .cacheDefaults(config)
+            .transactionAware()
             .build();
     }
-}
-```
-
-#### 缓存注解最佳实践
-```java
-@Service
-public class ProductService {
     
-    @Cacheable(value = "products", key = "#id", unless = "#result == null")
-    public Product getProduct(Long id) {
-        return productRepository.findById(id).orElse(null);
-    }
-    
-    @CachePut(value = "products", key = "#product.id")
-    public Product updateProduct(Product product) {
-        return productRepository.save(product);
-    }
-    
-    @CacheEvict(value = "products", key = "#id")
-    public void deleteProduct(Long id) {
-        productRepository.deleteById(id);
-    }
-    
-    // 批量操作缓存
-    @Caching(evict = {
-        @CacheEvict(value = "products", key = "#product.id"),
-        @CacheEvict(value = "productList", allEntries = true)
-    })
-    public Product updateProductWithCache(Product product) {
-        return productRepository.save(product);
-    }
-}
-```
-
-## 内存使用优化
-
-### 1. Bean 泄漏预防
-
-#### 常见泄漏场景
-```java
-// 场景1：静态引用导致无法 GC
-@Service
-public class CacheService {
-    private static Map<String, Object> staticCache = new HashMap<>(); // 泄漏风险！
-    
-    public void put(String key, Object value) {
-        staticCache.put(key, value);
+    // 多级缓存管理器
+    @Primary
+    @Bean
+    public CacheManager multiLevelCacheManager(
+            CacheManager localCacheManager,
+            CacheManager redisCacheManager) {
+        return new MultiLevelCacheManager(localCacheManager, redisCacheManager);
     }
 }
 
-// 场景2：ThreadLocal 未清理
-@Service
-public class UserContextService {
-    private static ThreadLocal<User> currentUser = new ThreadLocal<>();
+// 自定义多级缓存管理器
+public class MultiLevelCacheManager implements CacheManager {
     
-    public void setCurrentUser(User user) {
-        currentUser.set(user);
-    }
+    private final CacheManager localCacheManager;
+    private final CacheManager redisCacheManager;
+    private final Set<String> cacheNames = new HashSet<>();
     
-    // 必须清理！
-    public void clear() {
-        currentUser.remove();
-    }
-}
-
-// 场景3：监听器注册未注销
-@Component
-public class EventListenerService {
-    
-    @EventListener
-    public void handleEvent(ApplicationEvent event) {
-        // 处理事件
-    }
-    
-    // 需要手动注销
-    @PreDestroy
-    public void destroy() {
-        // 清理资源
-    }
-}
-```
-
-#### 解决方案
-```java
-// 使用 WeakHashMap 避免内存泄漏
-@Service
-public class SafeCacheService {
-    private Map<String, WeakReference<Object>> cache = new ConcurrentHashMap<>();
-    
-    public void put(String key, Object value) {
-        cache.put(key, new WeakReference<>(value));
-    }
-    
-    public Object get(String key) {
-        WeakReference<Object> ref = cache.get(key);
-        return ref != null ? ref.get() : null;
-    }
-}
-
-// ThreadLocal 使用模板
-@Component
-public class ThreadLocalTemplate {
-    
-    public <T> T executeWithContext(User user, Supplier<T> supplier) {
-        try {
-            UserContext.setCurrentUser(user);
-            return supplier.get();
-        } finally {
-            UserContext.clear(); // 确保清理
-        }
-    }
-}
-```
-
-### 2. 大对象处理优化
-
-#### 流式处理大数据
-```java
-@Service
-public class LargeDataService {
-    
-    @Transactional(readOnly = true)
-    public void processLargeData() {
-        // 使用流式查询避免内存溢出
-        try (Stream<User> userStream = userRepository.streamAll()) {
-            userStream
-                .filter(user -> user.isActive())
-                .forEach(this::processUser);
-        }
-    }
-    
-    // 分页处理
-    public void processByPage() {
-        int pageSize = 1000;
-        int page = 0;
+    public MultiLevelCacheManager(CacheManager localCacheManager, CacheManager redisCacheManager) {
+        this.localCacheManager = localCacheManager;
+        this.redisCacheManager = redisCacheManager;
         
-        Page<User> userPage;
-        do {
-            userPage = userRepository.findAll(PageRequest.of(page, pageSize));
-            userPage.getContent().forEach(this::processUser);
-            page++;
-        } while (userPage.hasNext());
+        // 合并缓存名称
+        cacheNames.addAll(localCacheManager.getCacheNames());
+        cacheNames.addAll(redisCacheManager.getCacheNames());
     }
-}
-
-// 自定义流式 Repository
-@Repository
-public interface UserRepository extends JpaRepository<User, Long> {
-    
-    @Query("SELECT u FROM User u")
-    Stream<User> streamAll();
-    
-    @Query("SELECT u FROM User u WHERE u.createTime > :startTime")
-    Stream<User> streamByCreateTimeAfter(@Param("startTime") LocalDateTime startTime);
-}
-```
-
-#### 内存映射文件处理
-```java
-@Service
-public class FileProcessingService {
-    
-    public void processLargeFile(Path filePath) throws IOException {
-        try (FileChannel channel = FileChannel.open(filePath, StandardOpenOption.READ)) {
-            MappedByteBuffer buffer = channel.map(
-                FileChannel.MapMode.READ_ONLY, 0, channel.size());
-            
-            // 处理文件内容，避免全部加载到内存
-            processBuffer(buffer);
-        }
-    }
-    
-    private void processBuffer(MappedByteBuffer buffer) {
-        // 分批处理缓冲区数据
-        byte[] chunk = new byte[8192];
-        while (buffer.hasRemaining()) {
-            int length = Math.min(chunk.length, buffer.remaining());
-            buffer.get(chunk, 0, length);
-            processChunk(chunk, length);
-        }
-    }
-}
-```
-
-## 监控与诊断
-
-### 1. Spring Boot Actuator 监控
-
-#### 配置监控端点
-```yaml
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,metrics,beans,env
-  endpoint:
-    health:
-      show-details: always
-    metrics:
-      enabled: true
-```
-
-#### 自定义健康检查
-```java
-@Component
-public class DatabaseHealthIndicator implements HealthIndicator {
-    
-    @Autowired
-    private DataSource dataSource;
     
     @Override
-    public Health health() {
-        try (Connection connection = dataSource.getConnection()) {
-            if (connection.isValid(5)) {
-                return Health.up()
-                    .withDetail("database", "Connected")
-                    .withDetail("validationTimeout", "5 seconds")
-                    .build();
-            } else {
-                return Health.down()
-                    .withDetail("database", "Connection invalid")
-                    .build();
-            }
-        } catch (SQLException e) {
-            return Health.down(e).build();
+    public Cache getCache(String name) {
+        return new MultiLevelCache(name, 
+            localCacheManager.getCache(name), 
+            redisCacheManager.getCache(name));
+    }
+    
+    @Override
+    public Collection<String> getCacheNames() {
+        return cacheNames;
+    }
+}
+
+// 多级缓存实现
+public class MultiLevelCache implements Cache {
+    
+    private final String name;
+    private final Cache localCache;
+    private final Cache redisCache;
+    
+    public MultiLevelCache(String name, Cache localCache, Cache redisCache) {
+        this.name = name;
+        this.localCache = localCache;
+        this.redisCache = redisCache;
+    }
+    
+    @Override
+    public String getName() {
+        return name;
+    }
+    
+    @Override
+    public Object getNativeCache() {
+        return this;
+    }
+    
+    @Override
+    public ValueWrapper get(Object key) {
+        // 先查本地缓存
+        ValueWrapper value = localCache.get(key);
+        if (value != null) {
+            return value;
+        }
+        
+        // 本地缓存未命中，查Redis
+        value = redisCache.get(key);
+        if (value != null) {
+            // 回写到本地缓存
+            localCache.put(key, value.get());
+        }
+        
+        return value;
+    }
+    
+    @Override
+    public <T> T get(Object key, Class<T> type) {
+        // 类似get方法实现
+        T value = localCache.get(key, type);
+        if (value != null) {
+            return value;
+        }
+        
+        value = redisCache.get(key, type);
+        if (value != null) {
+            localCache.put(key, value);
+        }
+        
+        return value;
+    }
+    
+    @Override
+    public void put(Object key, Object value) {
+        // 同时写入两级缓存
+        localCache.put(key, value);
+        redisCache.put(key, value);
+    }
+    
+    @Override
+    public void evict(Object key) {
+        // 同时清除两级缓存
+        localCache.evict(key);
+        redisCache.evict(key);
+    }
+    
+    @Override
+    public void clear() {
+        localCache.clear();
+        redisCache.clear();
+    }
+}
+
+// 缓存服务使用示例
+@Service
+public class CacheService {
+    
+    @Cacheable(value = "users", key = "#id")
+    public User getUserById(Long id) {
+        // 数据库查询逻辑
+        return userRepository.findById(id).orElse(null);
+    }
+    
+    @CachePut(value = "users", key = "#user.id")
+    public User updateUser(User user) {
+        return userRepository.save(user);
+    }
+    
+    @CacheEvict(value = "users", key = "#id")
+    public void deleteUser(Long id) {
+        userRepository.deleteById(id);
+    }
+    
+    // 缓存预热
+    @PostConstruct
+    public void warmUpCache() {
+        List<User> activeUsers = userRepository.findActiveUsers();
+        for (User user : activeUsers) {
+            // 预加载到缓存
+            cacheManager.getCache("users").put(user.getId(), user);
         }
     }
 }
 ```
 
-#### 自定义指标
+### 2. 缓存问题解决方案
+
+#### 缓存穿透解决方案
 ```java
 @Service
-public class BusinessMetrics {
+public class CachePenetrationSolution {
     
-    private final MeterRegistry meterRegistry;
-    private final Counter orderCounter;
-    private final Timer orderProcessingTimer;
+    // 布隆过滤器防止缓存穿透
+    @Autowired
+    private BloomFilter<String> bloomFilter;
     
-    public BusinessMetrics(MeterRegistry meterRegistry) {
-        this.meterRegistry = meterRegistry;
-        this.orderCounter = meterRegistry.counter("orders.created");
-        this.orderProcessingTimer = meterRegistry.timer("orders.processing.time");
+    public User getUserWithBloomFilter(Long id) {
+        String cacheKey = "user:" + id;
+        
+        // 先检查布隆过滤器
+        if (!bloomFilter.mightContain(cacheKey)) {
+            return null; // 肯定不存在
+        }
+        
+        // 查询缓存
+        User user = cacheService.getUserById(id);
+        if (user == null) {
+            // 查询数据库
+            user = userRepository.findById(id).orElse(null);
+            
+            if (user != null) {
+                // 写入缓存
+                cacheService.cacheUser(user);
+            } else {
+                // 空值缓存，防止重复查询
+                cacheService.cacheNullValue(id);
+            }
+        }
+        
+        return user;
     }
     
-    public void recordOrderCreation() {
-        orderCounter.increment();
-    }
-    
-    public void recordOrderProcessingTime(long duration) {
-        orderProcessingTimer.record(duration, TimeUnit.MILLISECONDS);
-    }
-}
-```
-
-### 2. 性能分析工具
-
-#### JProfiler 分析
-```java
-@Service
-public class PerformanceService {
-    
-    // 标记热点方法
-    @Profile("performance")
-    public void processData(List<Data> dataList) {
-        // 使用 JProfiler 分析性能瓶颈
-        dataList.stream()
-            .map(this::transform)
-            .forEach(this::persist);
-    }
-    
-    // 异步处理避免阻塞
-    @Async
-    public CompletableFuture<Void> asyncProcess(Data data) {
-        return CompletableFuture.runAsync(() -> {
-            // 耗时操作
-            heavyProcessing(data);
-        });
+    // 空值缓存
+    public void cacheNullValue(Long id) {
+        String cacheKey = "user:" + id;
+        redisTemplate.opsForValue().set(cacheKey, "NULL", 5, TimeUnit.MINUTES);
     }
 }
-```
 
-#### 内存分析配置
-```yaml
-# JVM 参数添加内存分析
-java:
-  opts: >
-    -XX:+HeapDumpOnOutOfMemoryError
-    -XX:HeapDumpPath=/tmp/heapdump.hprof
-    -XX:+PrintGCDetails
-    -XX:+PrintGCTimeStamps
-    -Xloggc:/tmp/gc.log
-```
-
-## 实战案例
-
-### 案例1：电商系统性能优化
-
-#### 问题描述
-- 启动时间 15 秒，内存占用 2GB
-- 高峰期响应时间超过 5 秒
-- 频繁 Full GC
-
-#### 优化方案
-```yaml
-# application-prod.yml
-spring:
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.jms.JmsAutoConfiguration
-      - org.springframework.boot.autoconfigure.websocket.WebSocketAutoConfiguration
-  
-  jpa:
-    show-sql: false
-    properties:
-      hibernate:
-        jdbc.batch_size: 50
-        order_inserts: true
-        order_updates: true
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,metrics
-```
-
-#### 优化效果
-- 启动时间：15s → 6s
-- 内存占用：2GB → 800MB
-- 响应时间：5s → 800ms
-
-### 案例2：微服务网关性能优化
-
-#### 问题描述
-- 网关成为性能瓶颈
-- 线程池频繁满负荷
-- 内存泄漏导致频繁重启
-
-#### 优化方案
-```java
+// 布隆过滤器配置
 @Configuration
-public class GatewayConfig {
+public class BloomFilterConfig {
     
     @Bean
-    public RouteLocator customRouteLocator(RouteLocatorBuilder builder) {
-        return builder.routes()
-            .route("user_service", r -> r.path("/api/users/**")
-                .filters(f -> f
-                    .addRequestHeader("X-Request-ID", UUID.randomUUID().toString())
-                    .retry(3)
-                    .circuitBreaker(config -> config
-                        .setName("userService")
-                        .setFallbackUri("forward:/fallback/user")))
-                )
-                .uri("lb://user-service"))
+    public BloomFilter<String> userBloomFilter() {
+        return BloomFilter.create(
+            Funnels.stringFunnel(Charset.defaultCharset()),
+            1000000, // 预期元素数量
+            0.01     // 误判率
+        );
+    }
+    
+    @EventListener
+    public void onApplicationReady(ApplicationReadyEvent event) {
+        // 应用启动时初始化布隆过滤器
+        List<Long> allUserIds = userRepository.findAllUserIds();
+        BloomFilter<String> bloomFilter = userBloomFilter();
+        
+        for (Long userId : allUserIds) {
+            bloomFilter.put("user:" + userId);
+        }
+    }
+}
+```
+
+#### 缓存击穿解决方案
+```java
+@Service
+public class CacheBreakdownSolution {
+    
+    // 互斥锁防止缓存击穿
+    public User getUserWithMutexLock(Long id) {
+        String cacheKey = "user:" + id;
+        String lockKey = "lock:user:" + id;
+        
+        // 尝试获取缓存
+        User user = cacheService.getUserById(id);
+        if (user != null) {
+            return user;
+        }
+        
+        // 获取分布式锁
+        if (tryLock(lockKey)) {
+            try {
+                // 双重检查
+                user = cacheService.getUserById(id);
+                if (user != null) {
+                    return user;
+                }
+                
+                // 查询数据库
+                user = userRepository.findById(id).orElse(null);
+                if (user != null) {
+                    cacheService.cacheUser(user);
+                }
+                
+                return user;
+            } finally {
+                releaseLock(lockKey);
+            }
+        } else {
+            // 未获取到锁，等待并重试
+            Thread.sleep(100);
+            return getUserWithMutexLock(id);
+        }
+    }
+    
+    private boolean tryLock(String lockKey) {
+        return redisTemplate.opsForValue().setIfAbsent(lockKey, "locked", 30, TimeUnit.SECONDS);
+    }
+    
+    private void releaseLock(String lockKey) {
+        redisTemplate.delete(lockKey);
+    }
+}
+```
+
+## 网络优化
+
+### 1. HTTP 客户端优化
+
+#### WebClient 配置优化
+```java
+@Configuration
+public class WebClientConfig {
+    
+    @Bean
+    public WebClient webClient() {
+        HttpClient httpClient = HttpClient.create()
+            .option(ChannelOption.CONNECT_TIMEOUT_MILLIS, 5000)
+            .responseTimeout(Duration.ofSeconds(10))
+            .doOnConnected(conn -> 
+                conn.addHandlerLast(new ReadTimeoutHandler(10, TimeUnit.SECONDS))
+                    .addHandlerLast(new WriteTimeoutHandler(10, TimeUnit.SECONDS)));
+        
+        return WebClient.builder()
+            .clientConnector(new ReactorClientHttpConnector(httpClient))
+            .codecs(configurer -> configurer.defaultCodecs().maxInMemorySize(10 * 1024 * 1024))
             .build();
     }
     
+    // 连接池配置
     @Bean
-    public HttpClient httpClient() {
-        return HttpClient.create()
-            .option(ChannelOption.CONNECT_TIMEOUT_MILLIS, 5000)
-            .doOnConnected(conn -> 
-                conn.addHandlerLast(new ReadTimeoutHandler(10))
-                    .addHandlerLast(new WriteTimeoutHandler(10)));
+    public ConnectionProvider connectionProvider() {
+        return ConnectionProvider.builder("custom")
+            .maxConnections(100)
+            .pendingAcquireTimeout(Duration.ofSeconds(5))
+            .maxIdleTime(Duration.ofSeconds(30))
+            .maxLifeTime(Duration.ofMinutes(5))
+            .build();
+    }
+}
+
+// 优化的HTTP服务
+@Service
+public class OptimizedHttpService {
+    
+    @Autowired
+    private WebClient webClient;
+    
+    // 异步HTTP调用
+    public Mono<String> fetchDataAsync(String url) {
+        return webClient.get()
+            .uri(url)
+            .retrieve()
+            .bodyToMono(String.class)
+            .timeout(Duration.ofSeconds(5))
+            .onErrorResume(throwable -> {
+                // 错误处理
+                logger.error("HTTP请求失败: {}", url, throwable);
+                return Mono.just("fallback");
+            });
+    }
+    
+    // 批量请求
+    public Flux<String> fetchMultipleData(List<String> urls) {
+        return Flux.fromIterable(urls)
+            .flatMap(this::fetchDataAsync, 10); // 并发度控制
     }
 }
 ```
 
-## 总结
+## 最佳实践总结
 
-Spring 性能优化需要系统性的思考和持续的努力。关键要点：
+### 性能优化检查清单
 
-1. **启动优化**：精确扫描、懒加载、排除不必要的自动配置
-2. **运行时优化**：合理的事务策略、缓存策略、Bean 生命周期管理
-3. **内存优化**：预防泄漏、处理大对象、合理使用作用域
-4. **监控诊断**：利用 Actuator、Profiler 等工具持续监控
+```mermaid
+flowchart TD
+    A[性能优化检查清单] --> B[应用监控]
+    A --> C[内存优化]
+    A --> D[启动优化]
+    A --> E[并发优化]
+    A --> F[数据库优化]
+    A --> G[缓存优化]
+    A --> H[网络优化]
+    
+    B --> B1[Actuator 配置]
+    B --> B2[自定义指标]
+    B --> B3[APM 集成]
+    
+    C --> C1[内存泄漏排查]
+    C --> C2[GC 调优]
+    C --> C3[对象池优化]
+    
+    D --> D1[懒加载策略]
+    D --> D2[组件扫描优化]
+    D --> D3[类路径优化]
+    
+    E --> E1[线程池配置]
+    E --> E2[异步处理]
+    E --> E3[响应式编程]
+    
+    F --> F1[连接池优化]
+    F --> F2[SQL 优化]
+    F --> F3[事务优化]
+    
+    G --> G1[多级缓存]
+    G --> G2[缓存问题解决]
+    G --> G3[缓存预热]
+    
+    H --> H1[HTTP 客户端优化]
+    H --> H2[连接池优化]
+    H --> H3[序列化优化]
+```
 
-通过本文的实战指南，您将能够显著提升 Spring 应用的性能表现。
+### 性能优化优先级
+
+| 优先级 | 优化领域 | 预期收益 | 实施难度 |
+|--------|----------|----------|----------|
+| ⭐⭐⭐ | 数据库优化 | 高 | 中 |
+| ⭐⭐⭐ | 缓存优化 | 高 | 低 |
+| ⭐⭐ | 并发优化 | 中 | 中 |
+| ⭐⭐ | 内存优化 | 中 | 高 |
+| ⭐ | 启动优化 | 低 | 低 |
+| ⭐ | 网络优化 | 低 | 低 |
+
+### 性能测试和监控
+
+#### 性能测试配置
+```java
+@SpringBootTest
+@TestPropertySource(properties = {
+    "spring.jpa.show-sql=false",
+    "spring.jpa.properties.hibernate.generate_statistics=true",
+    "logging.level.org.hibernate.stat=DEBUG"
+})
+@ActiveProfiles("test")
+public class PerformanceTest {
+    
+    @Autowired
+    private TestRestTemplate restTemplate;
+    
+    @Test
+    public void testApiPerformance() {
+        // 压力测试
+        IntStream.range(0, 1000).parallel().forEach(i -> {
+            ResponseEntity<String> response = restTemplate.getForEntity("/api/users", String.class);
+            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        });
+    }
+    
+    @Test
+    public void testDatabasePerformance() {
+        // 数据库性能测试
+        StopWatch stopWatch = new StopWatch();
+        stopWatch.start("query-test");
+        
+        List<User> users = userRepository.findAll();
+        
+        stopWatch.stop();
+        assertThat(stopWatch.getTotalTimeSeconds()).isLessThan(1.0);
+    }
+}
+```
+
+### 总结
+
+Spring 性能优化是一个系统工程，需要从多个维度进行综合考虑：
+
+1. **监控先行**：建立完善的监控体系，及时发现性能瓶颈
+2. **数据驱动**：基于监控数据进行有针对性的优化
+3. **渐进优化**：从高收益、低难度的优化点开始
+4. **持续改进**：性能优化是一个持续的过程，需要定期评估和调整
+5. **平衡考虑**：在性能、可维护性、开发效率之间找到平衡点
+
+通过本文介绍的优化策略和实践，可以显著提升 Spring 应用的性能表现，为高并发、高可用的系统提供坚实的技术支撑。
